--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Jukebox Joe</title>
   <link rel="stylesheet" href="css/style.css" />
-</head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3F9XFMV6KZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3F9XFMV6KZ');
+</script>
+
+  </head>
 <body id="top">
 
   <header>
