--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <main>
     <section>
       <h2>Welcome to The Jukebox Joe</h2>
-      <p>Sip, Chill, and Choose the Tunes.</p>
+      <p>Looking for a cozy café in Oakleigh? The Jukebox Joe serves the best coffee in Oakleigh South while you sip, chill, and choose your favourite tunes.</p>
     </section>
 
   <section>
