--- a/menu.html
+++ b/menu.html
@@ -24,11 +24,11 @@
   <main>
     <section class="menu-intro">
       <h2>Our Menu</h2>
-      <p>Delicious choices, freshly prepared.</p>
+      <p>Delicious choices, freshly prepared. Enjoy our signature latte art café Oakleigh South – perfect for coffee near me searches!</p>
 
           <main>
   <section>
-    <img src="images/menu.png" alt="menu" />
+    <img src="images/menu.png" alt="Menu items at café Oakleigh South" />
   </section>
 </main>
 
