--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 
   <header>
     <img src="images/logo.png" alt="logo" style="height: 100px; width: auto;"> 
-    <h1>The Jukebox Joe</h1>
+    <h1>Discover the Best Coffee in Oakleigh South at The Jukebox Joe</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="menu.html">Menu</a>
