--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Jukebox Joe</title>
+  <link rel="canonical" href="https://georgechrissmith.github.io/thejukebox-joe/" />
   <link rel="stylesheet" href="css/style.css" />
 
 <!-- Google tag (gtag.js) -->
