--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <main>
     <section class="contact-section">
       <h2>Contact Us</h2>
-      <p>Visit our café near Warrigal Road Oakleigh South, The Jukebox Joe, for the best coffee in town. Looking for a cozy café Oakleigh? We'd love to hear from you!<</p>
+      <p>Visit our café near Warrigal Road Oakleigh South, The Jukebox Joe, for the best coffee in town. Looking for a cozy café Oakleigh? We'd love to hear from you!</p>
 
       <form class="contact-form">
         <label for="name">Name</label>
