--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,8 @@
         </div>
       </div>
 
+      <img src="images/map.png" alt="Location map for Café Oakleigh South" />
+
       <footer>
     &copy; 2025 The Jukebox Joe. All rights reserved.
   </footer>
