--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
 
           <main>
   <section>
-    <img src="images/menu.png" alt="Menu items at café Oakleigh South" />
+    <img class="menu-image" src="images/menu.png" alt="Menu items at café Oakleigh South" />
   </section>
 </main>
 
